# email-triage-env

./: CHAT_HISTORY.txt  DEPLOYMENT_AND_TESTING_GUIDE.txt  DOCUMENTATION.md  Dockerfile  inference.py  requirements.txt  start.sh  test_all.py
email_triage_env/: README.md  __init__.py  client.py  models.py  pyproject.toml
email_triage_env/server/: Dockerfile  email_triage_environment.py  grader.py  task_data.py  tasks.py
server/: app.py
